<resources>
    <string name="app_name">MyGuessingGame</string>
    <string name="action_settings">Settings</string>
    <string name="enter_a_number_then_click_guess">Enter a number, then click Guess!</string>
    <string name="ed_s_guessing_game">Ed\'s Guessing Game</string>
    <string name="enter_a_number_between_1_and_100">Enter a number between 1 and 100:</string>
    <string name="guess">Guess!</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="game_stats">Game Stats</string>
    <string name="about">About</string>
</resources>
