<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.edarmoneit.myguessinggame.MainActivity">
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_newgame"
        android:title="@string/new_game" />
    <item
        android:id="@+id/action_gamestats"
        android:title="@string/game_stats" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about" />
</menu>
