<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="587dp"
        android:layout_height="774dp"
        android:background="@drawable/question_mark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="265dp"
            android:layout_marginLeft="264dp"
            android:layout_marginRight="265dp"
            android:layout_marginStart="264dp"
            android:layout_marginTop="160dp"
            android:text="@string/ed_s_guessing_game"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/enter_a_number_between_1_and_100"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    
        <EditText
            android:id="@+id/txtGuess"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:width="75dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    
        <Button
            android:id="@+id/btnGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/guess"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtGuess"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/txtGuess"
            app:layout_constraintTop_toBottomOf="@+id/txtGuess"/>
    
        <TextView
            android:id="@+id/lblOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/enter_a_number_then_click_guess"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnGuess"
            app:layout_constraintStart_toStartOf="@+id/btnGuess"
            app:layout_constraintTop_toBottomOf="@+id/btnGuess"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>